--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -129,14 +129,14 @@ jobs:
                 "https://download.yzuu.cf"
             )
             jiashua=$((RANDOM % ${#link_url[@]})) 
-            url1=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.version}}"/${{ env.FILE_NAME1 }}"
-            url2=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.version}}"/${{ env.FILE_NAME2 }}"
-            url3=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.version}}"/${{ env.FILE_NAME3 }}"
-            url4=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.version}}"/${{ env.FILE_NAME4 }}"
-            url5=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.version}}"/${{ env.FILE_NAME5 }}"
-            url6=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.version}}"/${{ env.FILE_NAME6 }}"
-            url7=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.version}}"/${{ env.FILE_NAME7 }}"
-            url8=${link_url[$jiashua]}"/bgvioletsky/DownloadApp/releases/download/"${{ env.version}}"/${{ env.FILE_NAME8 }}"
+            url1=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME1 }}"
+            url2=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME2 }}"
+            url3=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME3 }}"
+            url4=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME4 }}"
+            url5=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME5 }}"
+            url6=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME6 }}"
+            url7=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME7 }}"
+            url8=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME8 }}"
             
             echo "${{ env.FILE_NAME1 }}🔗 [下载]("$url1")">> release.txt
             echo "${{ env.FILE_NAME2 }}🔗 [下载]("$url2")">> release.txt
@@ -146,9 +146,9 @@ jobs:
             echo "${{ env.FILE_NAME6 }}🔗 [下载]("$url6")">> release.txt
             echo "${{ env.FILE_NAME7 }}🔗 [下载]("$url7")">> release.txt
             echo "${{ env.FILE_NAME8 }}🔗 [下载]("$url8")">> release.txt
-      - name: 压缩文件      
-        id : ssa
-        run : ./ys.sh
+      # - name: 压缩文件      
+      #   id : ssa
+      #   run : ./ys.sh
       - name: 发布到release
         uses: softprops/action-gh-release@v1
         env:
