--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -180,31 +180,31 @@ jobs:
       - name: 删除老的Releases
         uses: dev-drprasad/delete-older-releases@v0.1.0
         with:
-          keep_latest: 10
+          keep_latest: 2
           delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GIT_TOKEN }}
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+  # test:
+    # name: Test
+    # runs-on: ubuntu-latest
+    # steps:
+    # - name: Checkout code
+    #   uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '>=1.20.0'
-    - name: 安装依赖
-      run: |
-          git clone https://github.com/bgvioletsky/DownloadApp.git  bg
-          echo "version=$(bash version.sh)" >> $GITHUB_ENV
-          cd ./bg/xbs
-          go mod tidy && make
-          echo "下载文件">>kk.txt
-    - name: 发布到release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: ${{env.version}}
-        body_path: ./bg/xbs/kk.txt
-        files: ./bg/xbs/kk/*
+    # - name: Set up Go
+    #   uses: actions/setup-go@v4
+    #   with:
+    #     go-version: '>=1.20.0'
+    # - name: 安装依赖
+    #   run: |
+    #       git clone https://github.com/bgvioletsky/DownloadApp.git  bg
+    #       echo "version=$(bash version.sh)" >> $GITHUB_ENV
+    #       cd ./bg/xbs
+    #       go mod tidy && make
+    #       echo "下载文件">>kk.txt
+    # - name: 发布到release
+    #   uses: softprops/action-gh-release@v1
+    #   with:
+    #     tag_name: ${{env.version}}
+    #     body_path: ./bg/xbs/kk.txt
+    #     files: ./bg/xbs/kk/*
