--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -2,9 +2,9 @@ name: 下载软件并发布文件
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  
+  
+  
   schedule:
    - cron: 0 17 * * 5
 env:
@@ -18,6 +18,7 @@ env:
   UPLOAD_7: true
   UPLOAD_8: true
   UPLOAD_9: true 
+  XBS     : false
   
 jobs:
   build:
@@ -41,7 +42,7 @@ jobs:
       - name: 下载文件
         run: |
           python ./download.py
-          # wget -q --show-progress  "$url" -P ruanjian 
+          
 
       - name: 设置变量
         id: compile
@@ -113,48 +114,16 @@ jobs:
 
       - name: 创建链接
         id: ss
-        run: |
-            # link_url=(
-            #     "https://gh.h233.eu.org/https://github.com"
-            #     "https://gh.ddlc.top/https://github.com"
-            #     "https://dl.ghpig.top/https://github.com"
-            #     "https://slink.ltd/https://github.com"
-            #     "https://git.xfj0.cn/https://github.com"
-            #     "https://gh.con.sh/https://github.com"
-            #     "https://ghps.cc/https://github.com"
-            #     "https://gh-proxy.com/https://github.com"
-            #     "https://cors.isteed.cc/github.com"
-            #     "https://hub.gitmirror.com/https://github.com"
-            #     "https://download.nuaa.cf"
-            #     "https://download.yzuu.cf"
-            # )
-            # jiashua=$((RANDOM % ${#link_url[@]})) 
-            # url1=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME1 }}"
-            # url2=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME2 }}"
-            # url3=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME3 }}"
-            # url4=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME4 }}"
-            # url5=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME5 }}"
-            # url6=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME6 }}"
-            # url7=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME7 }}"
-            # url8=${link_url[$jiashua]}"/${{ github.repository }}/releases/download/"${{ env.version}}"/${{ env.FILE_NAME8 }}"
-            
-            # echo "${{ env.FILE_NAME1 }}🔗 [下载]("$url1")">> release.txt
-            # echo "${{ env.FILE_NAME2 }}🔗 [下载]("$url2")">> release.txt
-            # echo "${{ env.FILE_NAME3 }}🔗 [下载]("$url3")">> release.txt
-            # echo "${{ env.FILE_NAME4 }}🔗 [下载]("$url4")">> release.txt
-            # echo "${{ env.FILE_NAME5 }}🔗 [下载]("$url5")">> release.txt
-            # echo "${{ env.FILE_NAME6 }}🔗 [下载]("$url6")">> release.txt
-            # echo "${{ env.FILE_NAME7 }}🔗 [下载]("$url7")">> release.txt
-            # echo "${{ env.FILE_NAME8 }}🔗 [下载]("$url8")">> release.txt
+        run: |  
             echo "下载软件app">> release.txt
-      # - name: 压缩文件      
-      #   id : ssa
-      #   run : ./ys.sh
+
       - name: Set up Go
+        if: env.XBS == 'true' && !cancelled()
         uses: actions/setup-go@v4
         with:
            go-version: '>=1.20.0'
       - name: 安装依赖
+        if: env.XBS == 'true' && !cancelled()
         run: |
           git clone https://github.com/bgvioletsky/DownloadApp.git  bg
           echo "version=$(bash version.sh)" >> $GITHUB_ENV
@@ -196,11 +165,5 @@ jobs:
           delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GIT_TOKEN }}
-  # test:
-    # name: Test
-    # runs-on: ubuntu-latest
-    # steps:
-    # - name: Checkout code
-    #   uses: actions/checkout@v3
 
     
