--- a/.github/workflows/GetApp.yml
+++ b/.github/workflows/GetApp.yml
@@ -16,12 +16,15 @@ jobs:
         - name: 设置环境 下载相应工具
         #   uses: ./.github/actions/setup
           run: |
-              ls > bgcode.txt
+              cd .github | mkidir env
+              ls -al > bgcode.txt
+              cd env 
+              touch kk.txt
         - name: commit
           run: |
              git config --local user.email "bglhcode@qq.com"
              git config --local user.name "bgcode"
              git pull
-             git add bgcode.txt
+             git add bgcode.txt .github/env/kk.txt
              git commit -m "update $(date +'%Y-%m-%d %H:%M:%S')"  
              git push
