--- a/.github/workflows/GetApp.yml
+++ b/.github/workflows/GetApp.yml
@@ -16,15 +16,13 @@ jobs:
         - name: 设置环境 下载相应工具
         #   uses: ./.github/actions/setup
           run: |
-              cd .github | mkdir env
-              ls -al > bgcode.txt
-              cd env 
-              ls -al >> bgcode.txt
+              mkdir .github/env
+              ls -al > .github/env/bgcode.txt
         - name: commit
           run: |
              git config --local user.email "bglhcode@qq.com"
              git config --local user.name "bgcode"
              git pull
-             git add bgcode.txt 
+             git add .github/env/bgcode.txt
              git commit -m "update $(date +'%Y-%m-%d %H:%M:%S')"  
              git push
