--- a/.github/workflows/GetApp.yml
+++ b/.github/workflows/GetApp.yml
@@ -44,6 +44,6 @@ jobs:
              git config --local user.email "bglhcode@qq.com"
              git config --local user.name "bgcode"
              git pull
-             git add .github/env/bgcode.txt
+             git add .github/env/version.txt
              git commit -m "update $(date +'%Y-%m-%d %H:%M:%S')"  
              git push
