--- a/.github/workflows/GetApp.yml
+++ b/.github/workflows/GetApp.yml
@@ -15,30 +15,8 @@ jobs:
           uses: actions/checkout@v3
         - name: 设置环境版本号
           run: |
-              if [ ! -f .github/env/version.txt ]; then
-                    echo "0.0.0" > .github/env/version.txt
-              fi
-              VERSION=$(cat .github/env/version.txt)
-              IFS='.' read -r -a versionArray <<< "$VERSION"
-
-              # 递增最后一位数字
-              ((versionArray[2]++))
-
-              # 如果最后一位数字达到了20,则将它设为0并递增前一位数字
-              if [ "${versionArray[2]}" -eq 20 ]; then
-                  versionArray[2]=0
-                  ((versionArray[1]++))
-
-                    # 如果第二位数字达到了20,则将它设为0并递增第一位数字
-                    if [ "${versionArray[1]}" -eq 20 ]; then
-                        versionArray[1]=0
-                        ((versionArray[0]++))
-                    fi
-              fi
-              echo "${versionArray[0]}.${versionArray[1]}.${versionArray[2]}" > .github/env/version.txt
-
-              # 打印新版本号
-              echo "v${versionArray[0]}.${versionArray[1]}.${versionArray[2]}"
+              echo "version=$(bash version.sh)" >> $GITHUB_ENV
+              echo "bgcode=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
         - name: commit
           run: |
              git config --local user.email "bglhcode@qq.com"
